# SimpleFOC_ZJU

./: CMakeLists.txt  README.md
src/interface/: Arduino.cpp  Arduino.h  Print.cpp  WString.cpp  WString.h
src/interface/libraries/SPI/src/: SPI.h
